<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/resetpassword"
        android:textSize="30dp"
        android:id="@+id/resetpass"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetpass"
        android:text="@string/instruction"
        android:textSize="15dp"
        android:layout_margin="10dp"
        android:id="@+id/instruction"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruction"
        android:background="@drawable/text_shape"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:id="@+id/emailrest"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailrest"
        android:background="@drawable/text_shape"
        android:text="@string/send"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:id="@+id/sendbtn"/>


</RelativeLayout>