<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abeer_m.shop_project.login"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/register_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp"
        android:background="@drawable/text_shape"
        android:hint="@string/e_mail"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:id="@+id/register_name"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/text_shape"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/regigisterbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/register"
        android:textColor="@color/gray"
        android:background="@drawable/text_shape"/>

</RelativeLayout>
